update fix scroll, focus emoticon, close list emoticon after send msg, missing colored letter name==searchname, emoticon entity code input text

--- a/css/master.css
+++ b/css/master.css
@@ -472,7 +472,3 @@ body{
     cursor: pointer;
 }
 
-.colorgreen{
-    color: chartreuse;
-}
-
